feat: JWT 아이디 추출 후 변수에 저장