@@ -15,7 +15,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Component;
 
-import javax.crypto.SecretKey;
 import java.security.Key;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -31,6 +30,7 @@ public class JwtTokenProvider implements InitializingBean {
     private final String secret;
     private final long tokenValidityInMilliseconds;
     private Key key;
+    private String email;
 
     public JwtTokenProvider(
             @Value("${jwt.secret}") String secret,
@@ -65,8 +65,6 @@ public class JwtTokenProvider implements InitializingBean {
 //    }
 
     public Authentication getAuthentication(String token) {
-        System.out.println(token);
-        System.out.println("-------------------------");
         Claims claims = Jwts
                 .parserBuilder()
                 .setSigningKey(key)
@@ -74,13 +72,17 @@ public class JwtTokenProvider implements InitializingBean {
                 .parseClaimsJws(token)
                 .getBody();
 
-//        Collection <? extends GrantedAuthority> authorities =
-//                Arrays.stream(claims.get("Authorization").toString().split(","))
-//                        .filter(StringUtils::isNotBlank)
-//                        .map(SimpleGrantedAuthority::new)
-//                        .toList();
+        Object authoritiesObject = claims.get(AUTHORITIES_KEY);
+        Collection<? extends GrantedAuthority> authorities = new ArrayList<>();
+        setEmail(claims.getSubject());
+        if(authoritiesObject != null) {
+            authorities = Arrays.stream(authoritiesObject.toString().split(","))
+                    .filter(StringUtils::isNotBlank)
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
+        }
 
-        User principal = new User(claims.getSubject(), "", new ArrayList<>());
+        User principal = new User(claims.getSubject(), "N/A", new ArrayList<>());
 
         return new UsernamePasswordAuthenticationToken(principal, token, new ArrayList<>());
     }
@@ -100,23 +102,12 @@ public class JwtTokenProvider implements InitializingBean {
         }
         return false;
     }
-    //토큰에서 이메일 추출하는 메서드
-    public String extractSubFromJwt(String jwt) {
-        SecretKey secretKey = Keys.hmacShaKeyFor(secret.getBytes());
-        jwt=jwt.replace("Bearer ", "");
-        // JWT 파싱 및 검증
-        Claims claims = Jwts
-                .parserBuilder()
-                .setSigningKey(key)
-                .build()
-                .parseClaimsJws(jwt)
-                .getBody();
 
-        // sub 클레임 추출
-        String sub = claims.getSubject();
+    private void setEmail(String email) {
+        this.email = email;
+    }
 
-        // 추출된 sub 반환
-        return sub;
-
+    public String getEmail() {
+        return this.email;
     }
 }
